# elephant-calculator

./: .gitignore  .replit  .vercelignore  README.md  Sentiment_Analysis_Songs.ipynb  api.py  cas.py  cli.py  command_line.py  elephant.py  geoFormulas.py  irrationals.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh  test_endpoints.py  test_matrix.py  triangleSolver.py  turbo.json  vercel.json
api/: index.py
apps/api/: openapi.json  package.json  pyproject.toml
apps/api/src/elephant_calculator_api/: __init__.py  export_openapi.py  main.py
apps/api/src/elephant_calculator_api/models/: bases.py  cas.py  common.py  geometry.py  irrationals.py  matrices.py  multivariable.py  statistics.py  triangle_solver.py  vectors.py
apps/api/src/elephant_calculator_api/routers/: bases.py  cas.py  geometry.py  irrationals.py  matrices.py  multivariable.py  primes.py  pythagorean.py  statistics.py  triangle_solver.py  vectors.py
apps/api/tests/: test_calculus.py  test_new_operations.py  test_regressions.py  test_smoke.py
backend/: api.py  cli.py  test_endpoints.py  test_more_endpoints.py  tests.py
models/: cas.py  geometry.py  irrationals.py  matrices.py  primes.py  pythagorean.py  triangle_solver.py  vectors.py
modules/: matrix.py  vectorCalc.py
routers/: arithmetic.py  cas.py  geometry.py  irrationals.py  matrices.py  primes.py  pythagorean.py  triangle_solver.py  vectors.py
services/: cas.py  geometry.py  irrationals.py  matrix.py  primeGen.py  primes.py  pythagorean.py  triangleSolver.py  triangle_solver.py  vector.py
(+51 files in other folders)
