[project]
name = "elephant-calculator-monorepo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "inputimeout>=1.0.4",
  "mpmath>=1.3.0",
  "numpy>=2.2.0",
  "pydantic>=2.10.4",
  "sympy>=1.13.3",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "apps/api",
  "packages/calculator",
]
